Wire: fixed reply thread margins and spacing. Fixed red-button styling.

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -41,7 +41,7 @@ $black-shadow: 0px 2px 1px black
   background: $red
   border-radius: 5px
   color: #fff
-  text-shadow: -1px -1px 0px #64100D
+  text-shadow: 0px -1px 0px #64100D
   font-weight: bold
   height: 18px
   font-family: $heading
@@ -62,7 +62,7 @@ $black-shadow: 0px 2px 1px black
   &:active
     color: #fff
     +linear-gradient(color-stops(#d64541, #ac322f), bottom)
-    text-shadow: -1px -1px -1px #cb5450
+    text-shadow: 0px 1px 0px #64100D
 
 .green-button
   background: green
