--- a/app/stylesheets/shared/sidebar.sass
+++ b/app/stylesheets/shared/sidebar.sass
@@ -153,7 +153,7 @@
     .neighbor, .page
       margin-left: 0px
       border-bottom: 1px solid
-      border-color: rgba(225, 225, 225, 0.45)
+      border-color: rgba(225, 225, 225, 0.65)
       box-shadow: 0px 1px 0px rgba(255, 255, 255, 1.0)
       padding-bottom: 10px
       padding-top: 10px
