--- a/app/stylesheets/tour.sass
+++ b/app/stylesheets/tour.sass
@@ -39,26 +39,25 @@ strong
 /* Woo Buttons */
 .red-button
   background: $red
-  border-radius: 4px
+  border-radius: 5px
   color: #fff
-  text-shadow: 1px 1px 1px #541513
+  text-shadow: 0px -1px 0px #64100D
   font-weight: bold
   height: 18px
   font-family: $heading
   +linear-gradient(color-stops(#d0413d, #ac322f), top)
   display: block
-  font-size: 22px
+  font-size: 21px
   text-decoration: none
   border: 1px solid
   border-color: #ac322f
-  box-shadow: inset 0px 1px 1px #e28986
+  box-shadow: inset 0px 1px 0.5px #e28986
   padding: 15px
     top: 8px
     bottom: 16px
   &:hover, &:focus
     color: #fff
     +linear-gradient(color-stops(#ee5a56, #b53633), top)
-    text-shadow: 1px 1px 1px #541513
     box-shadow: 0px 2px 4px #adab9f
   &:active
     color: #fff
